<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="T_DATA_SAMPLE" Id="{3c57fe40-49f0-4263-b68a-3e2d4c9529c5}">
    <Declaration><![CDATA[TYPE T_DATA_SAMPLE :
STRUCT
	value: LREAL := 0.0;
	timestamp: LREAL := 0.0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>